# instagram-bot

./: .env.example  .gitignore  PUBLISH.md  README.md  agency_context.json  main.py  pyproject.toml  setup.ps1  setup.py  setup.sh  social-agents.code-workspace
agent-sdk/: README.md  bootstrap.py
agent-sdk/src/agent_sdk/: models.py
agent-sdk/tests/: test_control.py
bot-instagram/: .env.example  README.md  agency_context.json  bootstrap.py  bot.yaml  pyproject.toml
bot-instagram/data/raw/: sample_scraped.json
bot-instagram/scripts/: platform.manifest.yaml
bot-instagram/src/ig_agent/: api.py  config.py
bot-linkedin/: .env.example  .gitignore  README.md  bootstrap.py  bot.yaml  direction.json  pyproject.toml
bot-linkedin/scripts/: bootstrap_lib.py
bot-linkedin/src/linkedin_bot/: __init__.py  api.py  runtime.py
bot-x/: .env.example  README.md  bootstrap.py  bot.yaml  direction.json  pyproject.toml
bot-x/src/x_bot/: __init__.py  api.py  runtime.py
orchestrator/: .gitignore  README.md  bootstrap.py  orchestrator.yaml  pyproject.toml
orchestrator/backend/orchestrator_app/: __init__.py  main.py  registry.py
orchestrator/frontend/: index.html  package.json  vite.config.js
orchestrator/frontend/public/: index.html
orchestrator/frontend/src/: App.jsx  styles.css
orchestrator/scripts/: platform.manifest.yaml
plugins/: .gitkeep
scripts/: bootstrap_lib.py  create-github-repo.sh
src/ig_agent/: config.py  ingest.py  llm.py  runtime.py  safety.py  scheduler.py
