[project]
name = "bot-linkedin"
version = "0.1.0"
description = "LinkedIn observation bot stub (agent-sdk control contract)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
li-bot-serve = "linkedin_bot.api:serve"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
